--- a/style.css
+++ b/style.css
@@ -206,8 +206,8 @@ html,body {
 #subscribe h5{
     opacity: 0.6;
 }
-#subscribe h3{
-    font-size: medium;
+#subscribe a{
+    font-size: large;
     margin-top: 10px;
 }
 #footer{
