--- a/style.css
+++ b/style.css
@@ -207,6 +207,8 @@ html,body {
     opacity: 0.6;
 }
 #subscribe a{
+    color: white,
+    text-decoration: none,
     font-size: large;
     margin-top: 10px;
 }
