--- a/style.css
+++ b/style.css
@@ -207,10 +207,13 @@ html,body {
     opacity: 0.6;
 }
 #subscribe a{
-    color: white,
-    text-decoration: none,
-    font-size: large;
     margin-top: 10px;
+    color: white;
+    font-weight: 500;
+    padding-right: 2vw;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 14px;
 }
 #footer{
     background-color: #000000;
